fix: удалено свойство overflow из элементов блока profile: name, info и caption

--- a/blocks/profile/__button/_type/profile__button_type_add.css
+++ b/blocks/profile/__button/_type/profile__button_type_add.css
@@ -14,6 +14,7 @@
     .profile__button_type_add {
         justify-self: flex-end;
         max-width: 150px;
+        background-size: 22px;
     }
 }
 
