--- a/blocks/profile/__caption/profile__caption.css
+++ b/blocks/profile/__caption/profile__caption.css
@@ -6,7 +6,6 @@
     text-align: center;
     text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
