--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,7 +4,6 @@
     flex-grow: 1;
     gap: 6px;
     padding: 30px 0;
-    overflow: hidden;
 }
 
 @media screen and (min-width: 1280px) {
